# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./eventos";
 export * from "./blog";
 export * from "./usuarios";
 export * from "./cursos";
+export * from "./configuracoes";
